Include website link

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -26,6 +26,7 @@
 <h1 align="middle">CS 184/284A: Computer Graphics and Imaging, Spring 2024</h1>
 <h1 align="middle">Homework 1: Rasterizer</h1>
 <h2 align="middle">Dana Feng, Raymond Tan</h2>
+<h2 align="middle">Website link: https://cal-cs184-student.github.io/hw-webpages-sp24-raymondtan8/</h2>
 
 <div align="middle">
   <table style="width=100%">
