--- a/hw2/index.html
+++ b/hw2/index.html
@@ -266,7 +266,7 @@ In general, meshes become a lot smoother after loop subdivision, as loop subdivi
 	  <tr>
 		<td>
 		  <img src="images/task6_7.jpg" align="middle" width="400px"/>
-		  <figcaption align="middle">dae/icosahedron.dae with splitting edges and subedges to increase number of vertices.</figcaption>
+		  <figcaption align="middle">dae/icosahedron.dae, splitting edges and subedges to increase number of vertices.</figcaption>
 		</td>
 		<td>
 		  <img src="images/task6_8.jpg" align="middle" width="400px"/>
